--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   },
   "dependencies": {
     "@koa/cors": "^2.2.3",
+    "@okta/okta-auth-js": "^4.0.2",
+    "@okta/okta-sdk-nodejs": "^4.1.1",
     "app-module-path": "^2.0.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015-node5": "^1.2.0",
