--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@koa/cors": "^2.2.3",
     "app-module-path": "^2.0.0",
+    "axios": "^0.20.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015-node5": "^1.2.0",
     "babel-preset-stage-3": "^6.11.0",
